fix flickering navbar

--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -83,7 +83,7 @@ a:focus {
 
 .tm-navbar.scroll {
   background-color: white;
-  border-bottom: 1px solid #e9ecef;
+  /*border-bottom: 1px solid #e9ecef;*/
 }
 
 /* logo in the navigation bar */
